--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^8.6.8",
+    "flowbite": "^1.7.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
